strip out whitespace from email before validating with rejex. always store email as lowercase. fixed typo in modal message for cloning playlist

--- a/spotify/templates/spotify/playlists.html
+++ b/spotify/templates/spotify/playlists.html
@@ -42,12 +42,6 @@
                                             <td>
                                                 {{p.owner.display_name}}
                                                 {% if user_spotify_id != p.owner.id %}
-                                                <!-- <form action="{% url 'spotification:clone_playlist' %}" method="POST" class="minimal bg-transparent">
-                                                    {% csrf_token %}
-                                                    <input type="hidden" name="playlist_id" value="{{p.id}}">
-                                                    <input type="hidden" name="playlist_name" value="{{p.name}}">
-                                                    <input class="btn btn-link p-0 m-0" type="submit" value="Make it mine">
-                                                </form> -->
                                                 <span class="clone-link btn btn-link pt-0 pb-0 text-success" modal='clone'>Make It Mine!</span>
                                                 <div class="modal clone-modal" >
                                                     <!-- Modal content -->
@@ -56,7 +50,7 @@
                                                             <span id="close" class="close-modal">&times;</span> Confirm Playlist Cloning
                                                         </div>
                                                         <div class = "modal-message">
-                                                            <p>Are you user you want to clone the playlist <b>{{p.name}}</b>?</p>
+                                                            <p>Are you sure you want to clone the playlist <b>{{p.name}}</b>?</p>
                                                             <p>This will make a copy of the playlist that you can make your own changes to -- you will own it! Doing so will unfollow the selected playlist.</p>
                                                             <form action="{% url 'spotification:clone_playlist' %}" method="POST" class="minimal">
                                                                 {% csrf_token %}
