--- a/login/static/style.css
+++ b/login/static/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: rgb(82, 82, 82);
+    box-sizing: border-box;
 }
 
 a {
@@ -51,8 +52,8 @@ a:hover {
 
 form {
     background-color: white;
-    padding:20px;
-    border-radius:10px;
+    /* padding:20px; */
+    /* border-radius:10px; */
 }
 
 form.minimal {
@@ -64,12 +65,6 @@ form.minimal {
 label {
     padding:0;
     margin:0;
-}
-
-.login-form {
-    max-width:600px;
-    margin:0 auto;
-    margin-top:30px;
 }
 
 /* The Modal (background) */
@@ -134,15 +129,28 @@ label {
     max-height:600px;
 }
 
+.container-inner.login-form {        
+    max-width:600px;
+    margin:0 auto;
+    border-radius:10px;
+}
+
+@media only screen and (max-width: 600px) {
+    .container-inner.login-form {        
+        max-width:600px;
+        border-radius:0;
+    }
+}
+
 @media only screen and (min-width: 970px) {
+    .container-fluid {
+        padding-left:20px;
+        padding-right:20px;
+    }
+
     .container-inner {
         max-width:970px;
         margin:0 auto;
         border-radius:10px;
-    }
-
-    .container-fluid {
-        padding-left:20px;
-        padding-right:20px;
     }
 }
