--- a/login/templates/login/new-user.html
+++ b/login/templates/login/new-user.html
@@ -15,66 +15,70 @@
     </head>
     <body>
         {% include 'navbar.html' %}
-        <form class="login-form" action="{% url 'login:register' %}" method="post">
-            {% csrf_token %}
-            <h1>Register</h1>
-      
-            <div class="form-group">
-                <label for="first-name">First Name</label>
-                <div id="first-name-message" class="text-danger">
-                    {% if messages %} {% for m in messages %} 
-                    {% if m.extra_tags == 'first-name' %} {{m}} {% endif %}
-                    {% endfor %} {% endif %}
-                </div>
-                <input type="text" name="first-name" id="first-name" class="form-control"
-                    value="{{ request.session.first_name}} ">
+        <div class="container-fluid">
+            <div class="container-inner login-form">
+                <form action="{% url 'login:register' %}" method="post">
+                    {% csrf_token %}
+                    <h1>Register</h1>
+            
+                    <div class="form-group">
+                        <label for="first-name">First Name</label>
+                        <div id="first-name-message" class="text-danger">
+                            {% if messages %} {% for m in messages %} 
+                            {% if m.extra_tags == 'first-name' %} {{m}} {% endif %}
+                            {% endfor %} {% endif %}
+                        </div>
+                        <input type="text" name="first-name" id="first-name" class="form-control"
+                            value="{{ request.session.first_name}} ">
+                    </div>
+                    <div class="form-group">
+                        <label for="last-name">Last Name</label>
+                        <div id="last-name-message" class="text-danger">
+                            {% if messages %} {% for m in messages %} 
+                            {% if m.extra_tags == 'last-name' %} {{m}} {% endif %}
+                            {% endfor %} {% endif %}
+                        </div>
+                        <input type="text" name="last-name" id="last-name" class="form-control"
+                            value="{{ request.session.last_name}}">
+                    </div>
+                    <div class="form-group">
+                        <label for="birthday">Birthday</label>
+                        <div id="birthday-message" class="text-danger">
+                            {% if messages %} {% for m in messages %} 
+                            {% if m.extra_tags == 'birthday' %} {{m}} {% endif %}
+                            {% endfor %} {% endif %}
+                        </div>
+                        <input type="date" name="birthday" id="birthday" class="form-control"
+                            value="{{ request.session.birthday}}">
+                    </div>
+                    <div class="form-group">
+                        <label for="register-email">Email</label>
+                        <div id="email-message" class="text-danger">
+                            {% if messages %} {% for m in messages %} 
+                            {% if m.extra_tags == 'email' %} {{m}} {% endif %}
+                            {% endfor %} {% endif %}
+                        </div>
+                        <input type="text" name="email" id="register-email" class="form-control"
+                            placeholder="Spotify email" value="{{ request.session.register_email}}">
+                    </div>
+                    <div class="form-group">
+                        <label for="register-password">Password</label>
+                        <div id="password-message" class="text-danger">
+                            {% if messages %} {% for m in messages %} 
+                            {% if m.extra_tags == 'password' %} {{m}} {% endif %}
+                            {% endfor %} {% endif %}
+                        </div>
+                        <input type="password" name="password" id="register-password" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="confirm-password">Confirm Password</label>
+                        <input type="password" name="confirm-password" id="confirm-password" class="form-control">
+                    </div>
+                    <button type="submit" class="btn btn-secondary">Register</button>
+                    <p class="pt-4"><a href = "{% url 'login:home' %}">Already have an account? Log In</a></p>
+                </form> 
             </div>
-            <div class="form-group">
-                <label for="last-name">Last Name</label>
-                <div id="last-name-message" class="text-danger">
-                    {% if messages %} {% for m in messages %} 
-                    {% if m.extra_tags == 'last-name' %} {{m}} {% endif %}
-                    {% endfor %} {% endif %}
-                </div>
-                <input type="text" name="last-name" id="last-name" class="form-control"
-                    value="{{ request.session.last_name}}">
-            </div>
-            <div class="form-group">
-                <label for="birthday">Birthday</label>
-                <div id="birthday-message" class="text-danger">
-                    {% if messages %} {% for m in messages %} 
-                    {% if m.extra_tags == 'birthday' %} {{m}} {% endif %}
-                    {% endfor %} {% endif %}
-                </div>
-                <input type="date" name="birthday" id="birthday" class="form-control"
-                    value="{{ request.session.birthday}}">
-            </div>
-            <div class="form-group">
-                <label for="register-email">Email</label>
-                <div id="email-message" class="text-danger">
-                    {% if messages %} {% for m in messages %} 
-                    {% if m.extra_tags == 'email' %} {{m}} {% endif %}
-                    {% endfor %} {% endif %}
-                </div>
-                <input type="text" name="email" id="register-email" class="form-control"
-                    placeholder="Spotify email" value="{{ request.session.register_email}}">
-            </div>
-            <div class="form-group">
-                <label for="register-password">Password</label>
-                <div id="password-message" class="text-danger">
-                    {% if messages %} {% for m in messages %} 
-                    {% if m.extra_tags == 'password' %} {{m}} {% endif %}
-                    {% endfor %} {% endif %}
-                </div>
-                <input type="password" name="password" id="register-password" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="confirm-password">Confirm Password</label>
-                <input type="password" name="confirm-password" id="confirm-password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-secondary">Register</button>
-            <p class="pt-4"><a href = "{% url 'login:home' %}">Already have an account? Log In</a></p>
-        </form>    
+        </div>   
     </body>
 </html>
 
