--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Log In</title>
-        <meta name="description" content="Log in to the site">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
-            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        {% load static %}
-        <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-        <link rel="shortcut icon" type="image/png" href="{% static 'spotify_favicon.png' %}"/>
+    <head>  
+        {% include 'head.html' %}
+        <title>Spotification - Log In</title>
+        <meta name="description" content="Spotification provides additional Spotify playlist features you can't get directly through Spotify. 
+            Combine playlists into groups! Clone playlists you follow so you can modify them!">        
     </head>
     <body>
         {% include 'navbar.html' %}
