--- a/login/templates/login/new-user.html
+++ b/login/templates/login/new-user.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Register</title>
-        <meta name="description" content="New user registration">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
-            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        {% load static %}
-        <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">    
-        <link rel="shortcut icon" type="image/png" href="{% static 'spotify_favicon.png' %}"/>    
+        {% include 'head.html' %}
+        <title>Spotification - Register</title>
+        <meta name="description" content="Spotification - new user registration">
     </head>
     <body>
         {% include 'navbar.html' %}
