--- a/spotify/templates/spotify/playlists.html
+++ b/spotify/templates/spotify/playlists.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        {% include 'head.html' %}
         <title>Playlists</title>
-        <meta name="description" content="Spoitification - edit playlists">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
-            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <meta name="description" content="Spoitification Playlists: add your Spotify playlists to groups for combined playback. 
+            Clone playlists you don't own yet and make them yours.">
         {% load static %}
-        <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">     
         <script src="{% static 'playlists.js' %}" defer></script>
         <script src="{% static 'modal.js' %}" defer></script>   
-        <link rel="shortcut icon" type="image/png" href="{% static 'spotify_favicon.png' %}"/>
     </head>
     <body>
         {% include 'navbar.html' %}
