--- a/login/static/style.css
+++ b/login/static/style.css
@@ -16,8 +16,13 @@ a:hover {
     color:white;
 }
 
+.brand-header {
+    background-color:black;
+    color:white;
+    font-size:1.3rem;
+}
+
 .nav-link {
-    display: inline-block;
     font-size:1.1rem;
     color: #34DE5B
 }
@@ -26,9 +31,11 @@ a:hover {
     color: #3CFF69;
 }
 
-.app-name {
-    display: inline-block;
-    font-size:1.5rem;
+#menu-divider {
+    border-bottom: 1px solid #28a745;
+    padding:0; 
+    margin:0;
+    height:5px;
 }
 
 #logo {
