--- a/login/templates/navbar.html
+++ b/login/templates/navbar.html
@@ -1,19 +1,31 @@
 {% load static %}
-<div class="navbar row">
-    <div class="col col-sm-5 app-name pr-4">        
+{% if request.session.user_id %}
+<nav class="navbar navbar-expand-md sticky-top">
+    <div class="brand-header px-2">
         <img id="logo" src="{% static 'spotify_favicon.png' %}" alt="logo">
-        Spotification {% if user_name %} - {{user_name}} {% endif %}
-    </div>      
-    <div class="col col-sm-7 text-right"> 
-        {% if request.session.user_id %}
-        <a class="nav-link" href="{% url 'spotification:home' %}">Home</a>
-        <a class="nav-link" href="{% url 'spotification:playlists-start' %}">Playlists</a>
-        <a class="nav-link" href="{% url 'spotification:groups-start' %}">Groups</a>
-        <a class="nav-link" href="{% url 'spotification:player' %}">Player</a>
-        <a class="nav-link" href="{% url 'login:profile' %}">Profile</a>
-        <a class="nav-link" href="{% url 'login:logout' %}">Log Out</a>
-        {% else %}
-        <a class="nav-link " href="{% url 'login:home' %}">Log In</a>
-        {% endif %}
+        Spotification <span class="d-none d-sm-inline-block">{% if user_name %} - {{user_name}} {% endif %}</span> 
+    </div>    
+    <button class="navbar-toggler btn btn-link nav-link px-1" data-toggle="collapse" data-target="#collapse_target">
+        Menu <span class="dropdown-toggle caret"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapse_target">
+        <div id="menu-divider" ></div>
+        <ul class="navbar-nav w-100 justify-content-end">            
+            <li class="nav-item pl-1 pr-0"><a class="nav-link" href="{% url 'spotification:home' %}">Home</a></li>
+            <li class="nav-item pl-1 pr-0"><a class="nav-link" href="{% url 'spotification:playlists-start' %}">Playlists</a></li>
+            <li class="nav-item pl-1 pr-0"><a class="nav-link" href="{% url 'spotification:groups-start' %}">Groups</a></li>
+            <li class="nav-item pl-1 pr-0"><a class="nav-link" href="{% url 'spotification:player' %}">Player</a></li>
+            <li class="nav-item pl-1 pr-0"><a class="nav-link" href="{% url 'login:profile' %}">Profile</a></li>
+            <li class="nav-item pl-1 pr-0"><a class="nav-link" href="{% url 'login:logout' %}">Log Out</a></li>
+        </ul>
     </div>
-</div>
+</nav>
+{% else %}
+<nav class="navbar">
+    <div class="brand-header px-2">
+        <img id="logo" src="{% static 'spotify_favicon.png' %}" alt="logo">
+        Spotification
+    </div>
+    <span class="nav-item"><a class="nav-link pl-2" href="{% url 'login:home' %}">Log In</a></span>
+</nav>  
+{% endif %}
