--- a/spotify/templates/spotify/player.html
+++ b/spotify/templates/spotify/player.html
@@ -12,60 +12,54 @@
         <div class="container-fluid">
             <div class="container-inner">
                 <div class="row">
-                    <div class="col col-sm-12">
-                        <form id="player-group-form" method="post" class="minimal">
+                    <div class="col col-lg-6 mb-3 pr-4">
+                        <h4>Player</h4>
+                        <form id="player-group-form" method="post" >
                             {% csrf_token %}
-                            <div class="form-group form-row">
-                                <label for="group" class="col-sm-3 col-form-label text-right">Play a Playlist Group</label>
-                                <div class="col-sm-6">
-                                    <select id="selected-group-id" name="group-id" value="{{current_group.id}}" class="form-control play-select">
-                                        <option value="0">[ select a group to play ]</option>
-                                        {% for g in groups %}
-                                        <option value="{{g.id}}" {% if g.id == current_group.id %} selected {% endif %}>{{g.name}}</option>
-                                        {% endfor %}
-                                    </select>
-                                </div>
-                                <div class="col-sm-3">
-                                    <button type="submit" id="play-group-button" class="btn btn-success">Play Group</button>
-                                </div>
-                            </div> 
+                            <div class="form-group">
+                                <label for="group">Play Group</label>
+                                <select id="selected-group-id" name="group-id" value="{{current_group.id}}" class="form-control play-select">
+                                    <option value="0">[ select a group to play ]</option>
+                                    {% for g in groups %}
+                                    <option value="{{g.id}}" {% if g.id == current_group.id %} selected {% endif %}>{{g.name}}</option>
+                                    {% endfor %}
+                                </select>
+                                <button type="submit" id="play-group-button" class="btn btn-success my-2">Play Group</button>
+                            </div>
                         </form>
-                        <form id="player-playlist-form" method="post" class="minimal">
+                        <form id="player-playlist-form" method="post" >
                             {% csrf_token %}
-                            <div class="form-group form-row">
-                                <label for="playlist-spotify-id" class="col-sm-3 col-form-label text-right">Play a Playlist</label>
-                                <div class="col-sm-6">
-                                    <select id="playlist-spotify-id" name="spotify-id" value="{{current_spotify_id}}"" class="form-control play-select">
-                                        <option value="0">[ select a playlist to play ]</option>
-                                        {% for p in playlists %}
-                                        <option value="{{p.id}}" {% if p.id == current_spotify_id %} selected {% endif %}>{{p.name}} </option>
-                                        {% endfor %}
-                                        </select>                                
-                                </div>
-                                <div class="col-sm-3">
-                                    <button type="submit" id="play-playlist-button" class="btn btn-success">Play Playlist</button>
-                                </div>                                
+                            <div class="form-group">
+                                <label for="playlist-spotify-id">Play Playlist</label>
+                                <select id="playlist-spotify-id" name="spotify-id" value="{{current_spotify_id}}"" class="form-control play-select">
+                                    <option value="0">[ select a playlist to play ]</option>
+                                    {% for p in playlists %}
+                                    <option value="{{p.id}}" {% if p.id == current_spotify_id %} selected {% endif %}>{{p.name}} </option>
+                                    {% endfor %}
+                                    </select>                                
+                                <button type="submit" id="play-playlist-button" class="btn btn-success mt-2">Play Playlist</button>
                             </div>                            
                         </form>
                     </div>
-                </div>
-                <div id="player">                            
-                    <h4>Player</h4>                    
-                    <div id="current-track"></div>                    
-                    <form id="player-form" method="post" class="minimal">
-                        {% csrf_token %}
-                        <input type="hidden" id="device-id" class= "device-id" name="device-id">
-                        <input type="hidden" id="uri" name="uri">
-                        <input type="hidden" id="player-group-id" name="group-id">
-                        <input type="hidden" id="tracklist-type" name="tracklist-type">
-                        
-                        <!-- input "name" below will load into post data "action" key -->
-                        <input type="submit" name="play" value="Play" class="player-button btn btn-success">
-                        <input type="submit" name="skip" value="Skip" class="player-button btn btn-secondary">
-                        <input type="submit" name="pause" value="Pause" class="player-button btn btn-danger">
-                    </form>
-                    <div id="player-error" class="mt-4"></div>
-                </div>                
+                
+                    <div id="player" class="col-col-md-6 px-3">                   
+                        <h4>Now Playing</h4>                    
+                        <div id="current-track"></div>                    
+                        <form id="player-form" method="post" class="minimal">
+                            {% csrf_token %}
+                            <input type="hidden" id="device-id" class= "device-id" name="device-id">
+                            <input type="hidden" id="uri" name="uri">
+                            <input type="hidden" id="player-group-id" name="group-id">
+                            <input type="hidden" id="tracklist-type" name="tracklist-type">
+                            
+                            <!-- input "name" below will load into post data "action" key -->
+                            <input type="submit" name="play" value="Play" class="player-button btn btn-success">
+                            <input type="submit" name="skip" value="Skip" class="player-button btn btn-secondary">
+                            <input type="submit" name="pause" value="Pause" class="player-button btn btn-danger">
+                        </form>
+                        <div id="player-error" class="mt-4"></div>
+                    </div>   
+                </div>             
             </div>
         </div>
         <script src="https://sdk.scdn.co/spotify-player.js"></script>
